--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-simplify-action": "^0.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.7.4",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
